Fixed problem where nav was open by default on mobile

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -377,7 +377,7 @@ span.tags
 
 .notification-date-time-retweets {
   margin-left: 10px;
-  background: none;
+  background: none !important;
 }
 
 .shout-proposal-buttons {
